--- a/literature.html
+++ b/literature.html
@@ -333,6 +333,9 @@ $(document).ready(function () {
     <li>
       <a href="06_d_variables_mutate_summarise_homework.html">Dplyr 3 - funkce mutate, summarise atd.</a>
     </li>
+    <li>
+      <a href="07_factors_homework.html">Forcats - práce s faktory</a>
+    </li>
   </ul>
 </li>
 <li>
