--- a/06_d_variables_mutate_summarise_homework.html
+++ b/06_d_variables_mutate_summarise_homework.html
@@ -321,6 +321,9 @@ $(document).ready(function () {
     <li>
       <a href="09_plot_format.html">Vzhled grafů</a>
     </li>
+    <li>
+      <a href="10_strings.html">Práce se stringy</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
