--- a/07_factors.html
+++ b/07_factors.html
@@ -393,6 +393,9 @@ div.tocify {
     <li>
       <a href="09_plot_format.html">Vzhled grafů</a>
     </li>
+    <li>
+      <a href="10_strings.html">Práce se stringy</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
