--- a/course_data.html
+++ b/course_data.html
@@ -317,6 +317,9 @@ $(document).ready(function () {
     <li>
       <a href="09_plot_format.html">Vzhled grafů</a>
     </li>
+    <li>
+      <a href="10_strings.html">Práce se stringy</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
