--- a/01_intro_R.html
+++ b/01_intro_R.html
@@ -429,6 +429,9 @@ div.tocify {
     <li>
       <a href="07_factors_homework.html">Forcats - práce s faktory</a>
     </li>
+    <li>
+      <a href="08_ggplot_homework.html">ggplot2 - grafy</a>
+    </li>
   </ul>
 </li>
 <li>
