--- a/08_ggplot_homework.html
+++ b/08_ggplot_homework.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Data využívaná v kurzu</title>
+<title>ggplot2 - Domácí úkoly</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,6 +20,7 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
@@ -257,6 +258,9 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
 
 
@@ -377,107 +381,143 @@ $(document).ready(function () {
 
 <div class="fluid-row" id="header">
 
+<div class="btn-group pull-right">
+<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
+</ul>
+</div>
 
 
-<h1 class="title toc-ignore">Data využívaná v kurzu</h1>
+
+<h1 class="title toc-ignore">ggplot2 - Domácí úkoly</h1>
 
 </div>
 
 
-<p>V kurzu jsou primárně používaná data o Evropských zemích, získáná z Eurostatu</p>
-<p>Data je možné stáhnout v několika formátech:</p>
-<ul>
-<li><p><strong>Comma separated values formát</strong> je ke stažení <a href="https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/data/countries.csv">zde</a> (klikněte pravým tlačítkem a zvolte <em>Uložit odkaz jako…</em>/<em>Save link as…</em>).</p></li>
-<li><p><strong>RDS formát</strong> <a href="https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/countries.rds">zde</a>.</p></li>
-</ul>
-<p>Data obsahují následující proměnné:</p>
-<table>
-<colgroup>
-<col width="14%" />
-<col width="64%" />
-<col width="20%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th align="left">Jméno proměnné</th>
-<th align="left">Popis</th>
-<th align="left">Zdroj</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">country</td>
-<td align="left">Jméno země</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">code</td>
-<td align="left">Dvoumístný ISO kód země</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">gdp</td>
-<td align="left">HDP země v milionech euro (2018)</td>
-<td align="left">Eurostat</td>
-</tr>
-<tr class="even">
-<td align="left">population</td>
-<td align="left">Populace země k 1. lednu 2018</td>
-<td align="left">Eurostat</td>
-</tr>
-<tr class="odd">
-<td align="left">area</td>
-<td align="left">Celková rozloha země</td>
-<td align="left">CIA factbook</td>
-</tr>
-<tr class="even">
-<td align="left">eu_member</td>
-<td align="left">Je země členem Evropské unie? (2019)</td>
-<td align="left">Evropská unie</td>
-</tr>
-<tr class="odd">
-<td align="left">postsoviet</td>
-<td align="left">Byla země součástí Východního bloku?</td>
-<td align="left">Wikipedie</td>
-</tr>
-<tr class="even">
-<td align="left">life_exp</td>
-<td align="left">Naděje na dožití při narození (2017)</td>
-<td align="left">OSN</td>
-</tr>
-<tr class="odd">
-<td align="left">uni_prc</td>
-<td align="left">Podíl lidí s vysokoškolským vzděláním ve věku 15 až 64 let (2018)</td>
-<td align="left">Eurostat</td>
-</tr>
-<tr class="even">
-<td align="left">poverty_risk</td>
-<td align="left">Podíl lidí ohrožených chudobou (2017)</td>
-<td align="left">Eurostat</td>
-</tr>
-<tr class="odd">
-<td align="left">material_dep</td>
-<td align="left">Podíl lidí s materiální deprivací, 3 nebo méně položek (2017)</td>
-<td align="left">Eurostat</td>
-</tr>
-<tr class="even">
-<td align="left">hdi</td>
-<td align="left">Index lidského rozvoje (2018)</td>
-<td align="left">OSN</td>
-</tr>
-<tr class="odd">
-<td align="left">foundation_date</td>
-<td align="left">Datum vzniku/zformování země</td>
-<td align="left">Wikipedie</td>
-</tr>
-<tr class="even">
-<td align="left">maj_belief</td>
-<td align="left">Největší náboženská skupina v zemi (2018)</td>
-<td align="left">Pew Researcher Center</td>
-</tr>
-</tbody>
-</table>
-<p>Pro práci v kurzu doporučujeme stáhnout data v obou formátech (<code>.csv</code> i <code>.rds</code>) a uložit si je do podsložky <code>data</code> ve složce s ostatními materiály ke kurzu.</p>
+<div id="úkol" class="section level3">
+<h3>1. úkol</h3>
+<p>Vytvořte sloupcový graf pro proměnnou <em>Kategorizovaný index demokracie</em>.</p>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>countries %&gt;% count(di_cat) %&gt;% 
+  ggplot(aes(x = di_cat, y = n)) + geom_col()
+
+#Alternativne
+qplot(x = di_cat, data = countries)</code></pre>
+<div id="úkol-1" class="section level4">
+<h4>2. úkol</h4>
+<p>Přidejde do grafu z 1. úkolu nad každý sloupec popisek, vyjadřující počet zemí v dané kategorii. Popisky by měli být nad sloupci.</p>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>countries %&gt;% count(di_cat) %&gt;% 
+  ggplot(aes(x = di_cat, y = n, label = n)) +
+  geom_col() +
+  geom_text(nudge_y = 1)</code></pre>
+</div>
+</div>
+<div id="úkol-2" class="section level3">
+<h3>3. úkol</h3>
+<p>Vytvořte boxploty, které budou vyjadřovat vztah mezi proměnnými <em>Kategorizovaný index demokracie</em> a <em>Naděje na dožití</em>.</p>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>ggplot(aes(x = di_cat, y = life_exp), data = countries) + geom_boxplot()</code></pre>
+</div>
+<div id="úkol-3" class="section level3">
+<h3>4. úkol</h3>
+<p>Odfiltrujte kategorii <em>NA</em> z grafu z 2. úkolu a seřaďte boxploty do pořadí “Full democracy”, “Flawed democracy” a “Hybrid regime”:</p>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>countries %&gt;%
+  filter(!is.na(di_cat)) %&gt;% #odfiltruje chybejici hodnoty
+  mutate(di_cat = fct_relevel(di_cat, &quot;Full democracy&quot;, &quot;Flawed democracy&quot;, &quot;Hybrid regime&quot;)) %&gt;% #seradi kategorie
+  ggplot(aes(x = di_cat, y = life_exp)) + geom_boxplot()</code></pre>
+</div>
+<div id="úkol-4" class="section level3">
+<h3>5. úkol</h3>
+<p>Vytvořte scatterplot pro proměnné <em>Podíl lidí s vysokoškolským vzděláním</em> a <em>Naděje na dožití</em>.</p>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>ggplot(aes(x = uni_prc, y = life_exp), data = countries) + geom_point()</code></pre>
+</div>
+<div id="úkol-5" class="section level3">
+<h3>6. úkol</h3>
+<p>Ve grafu z 5. úkolu od sebe barevně odlište postsovětské a západní země a tvarem bodu od sebe odlište země spadající do různých kategorií Kategorizovaného indexu demokracie.</p>
+<pre class="r"><code>ggplot(aes(x = uni_prc, y = life_exp, color = postsoviet, shape = di_cat), data = countries) + geom_point()</code></pre>
+</div>
+<div id="úkol-6" class="section level3">
+<h3>7. úkol</h3>
+<p>Replikujte následující graf (Budete potřebovat balíček <code>scales</code>).</p>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>library(scales)
+
+ggplot(data = countries, aes(x = uni_prc, y = life_exp)) +
+  geom_point() +
+  geom_smooth(method = &quot;lm&quot;) +
+  scale_x_continuous(labels = percent_format(1)) +
+  labs(x = &quot;Podíl lidí s vysokoškolským vzděláním&quot;,
+       y = &quot;Naděje na dožití při narození&quot;,
+       title = &quot;Naděje na dožití a podíl obyvatel s VŠ vzděláním&quot;,
+       subtitle = &quot;Evropské země 2018&quot;,
+       caption = &quot;Zdroj dat: Eurostat 2018&quot;)</code></pre>
+<pre><code>## Warning: Removed 3 rows containing non-finite values (stat_smooth).</code></pre>
+<pre><code>## Warning: Removed 3 rows containing missing values (geom_point).</code></pre>
+<p><img src="08_ggplot_homework_files/figure-html/question%207-1.png" width="672" /></p>
+</div>
+<div id="úkol-7" class="section level3">
+<h3>8. úkol</h3>
+<p>Replikujte následující graf.</p>
+<p>Několik tipů:</p>
+<ol style="list-style-type: decimal">
+<li>Budete potřebovat balíček <code>scales</code>.</li>
+<li>Barvy pochází z brewer palety <code>Set1</code>.</li>
+<li>Pozadí a celkový vzhled je možné měnit pomocí předpřipravených themes (např. <code>theme_bw()</code>, <code>theme_minimal()</code>,…).</li>
+</ol>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>countries %&gt;% 
+  filter(!is.na(di_cat)) %&gt;% 
+  count(di_cat, postsoviet) %&gt;% 
+  mutate(postsoviet = fct_rev(postsoviet), #obrati poradi kategorii v promenne postsoviet
+         di_cat = fct_relevel(di_cat, &quot;Full democracy&quot;, &quot;Flawed democracy&quot;, &quot;Hybrid regime&quot;)) %&gt;%
+  ggplot(aes(x = di_cat, y = n, fill = postsoviet)) +
+  geom_col(position = &quot;fill&quot;) +
+  scale_fill_brewer(palette = &quot;Set1&quot;) + #paleta barev
+  scale_y_continuous(labels = percent_format(accuracy = 1)) +
+  labs(x = &quot;Democracy index&quot;, y = element_blank(), fill = &quot;Is country postsoviet?&quot;) +
+  theme_minimal() +
+  theme(legend.position = &quot;bottom&quot;)</code></pre>
+<p><img src="08_ggplot_homework_files/figure-html/question%208-1.png" width="672" /></p>
+</div>
+<div id="úkol-8" class="section level3">
+<h3>9. úkol</h3>
+<p>Vytvořte si simulovaná data pomocí následujícího skriptu (klikněte na tlačítko <strong>code</strong> vpravo):</p>
+<pre class="r"><code>likert = c(&quot;Spokojen&quot;, &quot;Spíše spokojen&quot;, &quot;Spíše nespokojen&quot;, &quot;Nespokojen&quot;)
+
+spokojenost = data.frame(spokojenst_prace = sample(likert, size = 100 ,replace = TRUE, prob = c(0.2, 0.5, 0.3, 0.1)),
+                         spokojenost_pratele = sample(likert, size = 100 ,replace = TRUE, prob = c(0.3, 0.5, 0.2, 0.1)),
+                         spokojenost_parner = sample(likert, size = 100 ,replace = TRUE, prob = c(0.5,  0.1, 0.3, 0.1)),
+                         spokojenost_rodina = sample(likert, size = 100 ,replace = TRUE, prob = c(0.1, 0.3, 0.2, 0.5)) )</code></pre>
+<p>A replikujte následující graf.</p>
+<p>Několik tipů:</p>
+<ol style="list-style-type: decimal">
+<li>Budete potřebovat balíček scales.</li>
+<li>Barvy pochází z brewer palety. Přehled palet najdete pomocí funkce <code>display.brewer.all()</code> z balíčku <code>RColorBrewer</code>.</li>
+</ol>
+<p>Pro odpověď klikněte na tlačítko <strong>code</strong>:</p>
+<pre class="r"><code>spokojenost %&gt;%
+  pivot_longer(cols = everything()) %&gt;% 
+  count(name, value) %&gt;% 
+  group_by(name) %&gt;% 
+  mutate(trust = sum(n[value %in% c(&quot;Spokojen&quot;,&quot;Spíše spokojen&quot;)] )) %&gt;% 
+  ungroup() %&gt;% 
+  mutate(name = fct_reorder(name, trust)) %&gt;% 
+  ggplot(aes(x = n, y = name, fill = value)) +
+    geom_col(position = &quot;fill&quot;) +
+    labs(x = element_blank(),
+         y = element_blank(),
+         fill = element_blank(),
+         title = &quot;Spokojenost s vybranými aspekty života&quot;) +
+    scale_x_continuous(labels = percent_format(accuracy = 1)) +
+    scale_fill_brewer(palette = &quot;RdYlGn&quot;) +
+    theme(legend.position = &quot;bottom&quot;)</code></pre>
+<p><img src="08_ggplot_homework_files/figure-html/question%209-1.png" width="672" /></p>
+</div>
 
 
 
@@ -512,6 +552,11 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
