--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@ $(document).ready(function () {
     <li>
       <a href="07_factors_homework.html">Forcats - práce s faktory</a>
     </li>
+    <li>
+      <a href="08_ggplot_homework.html">ggplot2 - grafy</a>
+    </li>
   </ul>
 </li>
 <li>
