add workspace instruction to setup, changed csv file to UTF-8 format

--- a/02_install_R.html
+++ b/02_install_R.html
@@ -466,6 +466,14 @@ Instalace Tidyverse
 </p>
 </div>
 </div>
+<div id="poslední-kroky" class="section level1">
+<h1>Poslední kroky</h1>
+<p>Jako úplně poslední věc se vyplatí změnit dvě výchozí nastavení, abychom si dlouhodobě ušetřili práci. R ve výchozím nastavení ukládá všechny nahraná data a další vámi vytvořerné objekty a nahraje je pokaždé, když R znovu zapnete. To je ovšem v praxi spíše na škodu, protože to znamená, že zanedlouho budete mít vaše prostředí zaneřáděné daty z předchozích hodin a projektů. Tomu se dá jednoduše zabránit tím, že si v Rstudiu otevřete záložku <strong>Tools</strong>, a v ní volbu <strong>Global options</strong>. V tomto nastevení <em>odškrtněte</em> možnost <strong>Restore .Rdata into workspace at startup</strong> a zároveň nastavte možnost <strong>Save workspace to .Rdata on exit</strong> na <em>never</em> tak, jak je to na obrázku níže.</p>
+<div class="figure">
+<img src="images/rstudio-startup-settings.png" alt="" />
+<p class="caption">Nastavení .Rdata workspace</p>
+</div>
+</div>
 
 
 
